# taxidpro-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
taxidpro/: __init__.py  main.py  test.py  test_main.py
tests/: test_main.py
