[project]
name = "taxidpro"
version = "1.0.2"
authors = [{ name = "Alan Hettinger", email = "alan@balancer.team" }]
description = "Tax ID Validation Library for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "twine", "hatchling"]

[project.urls]
Homepage = "https://github.com/balancer-team/taxidpro-py"
Issues = "https://github.com/balancer-team/taxidpro-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
